# python-ffmpegio-numpy

./: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: debug.yml  test_n_pub.yml
sandbox/: test_image_video.py
src/ffmpegio_plugin_numpy/: __init__.py
tests/: _test_memview.py  test_base.py  test_gray12le.py
