[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "ffmpegio"
description = "Media I/O with FFmpeg and NumPy array"
readme = "README.rst"
keywords = ["multimedia", "ffmpeg"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["ffmpegio-core >= 0.8.6", "numpy >= 1.20"]

[project.urls]
Home = "https://python-ffmpegio.github.io/python-ffmpegio"
Repository = "https://github.com/python-ffmpegio/python-ffmpegio"
Discussions = "https://github.com/python-ffmpegio/python-ffmpegio/discussions"
Issues = "https://github.com/python-ffmpegio/python-ffmpegio/issues"
"Pull Requests" = "https://github.com/python-ffmpegio/python-ffmpegio/pulls"


[tool.setuptools.dynamic]
version = { attr = "ffmpegio_plugin_numpy.__version__" }


[project.entry-points."ffmpegio"]
rawdata_numpy = "ffmpegio_plugin_numpy"
